--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ glove.6B/
 *.pth.tar
 coco.json
 dataset_coco.json
+experiments/
 web_app/tmp/
 # Byte-compiled / optimized / DLL files
 __pycache__/
